[package]
name = "reing"
version = "0.1.0"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]

[[bin]]
name = "reing"
path = "src/main.rs"

[dependencies]
dotenv = "0.11.0"
chrono = { version = "0.4.2", features = ["serde"] }
uuid = { version = "0.6", features = ["v4"] }

rocket = "0.4"
rocket_codegen = "0.4"
rocket_contrib = { version = "0.4", features = ["handlebars_templates", "tera_templates"] }
base64 = "0.9.1"
serde = "1.0.53"
serde_derive = "1.0.53"

egg-mode = { git = 'https://github.com/QuietMisdreavus/twitter-rs', rev = '8491554282f5e8a43f9144208198b756ce5ed07a' }
tokio = "0.1.13"

diesel = { version = "1.0.0", features = ["postgres", "chrono"] }
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"

lettre = { git = "https://github.com/lettre/lettre", rev = "fc91bb6ee8f9a28b818e98598af0a83a0dbb41d3" }
lettre_email = { git = "https://github.com/lettre/lettre", rev = "fc91bb6ee8f9a28b818e98598af0a83a0dbb41d3" }

image = "0.19.0"
reing_text2image = { git = "https://github.com/genya0407/reing_text2image.git", rev = "11631a56207ec47d346d5f97c1dd631855b2e7f6" }
