[package]
name = "reing"
version = "0.1.0"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]

[[bin]]
name = "reing"
path = "src/main.rs"

[dependencies]
dotenv = "0.11.0"
chrono = { version = "0.4.2", features = ["serde"] }
uuid = { version = "0.6", features = ["v4"] }

rocket = "0.4"
rocket_codegen = "0.4"
rocket_contrib = { version = "0.4", features = ["handlebars_templates", "tera_templates", "json"] }
base64 = "0.9.1"
serde = "1.0.53"
serde_derive = "1.0.53"
serde_json = "1.0.39"

egg-mode = { git = 'https://github.com/QuietMisdreavus/twitter-rs', rev = '8491554282f5e8a43f9144208198b756ce5ed07a' }
tokio = "0.1.13"

diesel = { version = "1.4.2", features = ["postgres", "chrono"] }
diesel_derives = "1.4.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"

lettre = "*"
lettre_email = "*"
htmlescape = "0.3.1"

image = "0.19.0"
reing_text2image = { git = "https://github.com/genya0407/reing_text2image.git", rev = "0cfd7c650a552cf29fb011175e7fc1c62e2653ce" }
