[package]
name = "reing"
version = "0.1.0"
authors = ["Yusuke Sangenya <longinus.eva@gmail.com>"]
edition = "2018"

[[bin]]
name = "reing"
path = "src/main.rs"

[dependencies]
dotenv = "0.11.0"
chrono = { version = "0.4.2", features = ["serde"] }
uuid = { version = "0.6", features = ["v4"] }
sha3 = { version = "0.8.2" }

base64 = "0.9.1"
serde = "1.0.53"
serde_derive = "1.0.53"
serde_json = "1.0.39"
log = "0.4"

egg-mode = { git = 'https://github.com/QuietMisdreavus/twitter-rs', rev = '027c9131b924b742edb1a5a2b0c99a2147c01dc3' }
tokio = "0.1.13"

diesel = { version = "1.4.2", features = ["postgres", "chrono"] }
diesel_derives = "1.4.0"
r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"

lettre = "*"
lettre_email = "*"
htmlescape = "0.3.1"

image = "0.19.0"
reing_text2image = { git = "https://github.com/genya0407/reing_text2image.git", rev = "0cfd7c650a552cf29fb011175e7fc1c62e2653ce" }
